--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+        <!--javafx-->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21.0.2</version> <!-- Use the relevant version -->
+        </dependency>
         <!--jsoup-->
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -56,6 +62,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.exppoints.fantasy.Main</mainClass>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
